fix broken css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,7 @@
 
 @layer utilities {
   .retro-stripes {
-    background-image: linear-gradient(-10vdeg,
+    background-image: linear-gradient(-10deg,
         transparent 0% 25%,
         theme('colors.secondary') 25% 45%,
         transparent 45% 55%,
